--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -11,8 +11,9 @@
           ],
           "defaultAuthentication": {
             "apiKeyConfig": {
+              "apiKeyExpirationDate": "2023-09-11T09:40:35.979Z",
               "apiKeyExpirationDays": 30,
-              "description": "api key description"
+              "description": "camera-settings api"
             },
             "authenticationType": "API_KEY"
           }
