--- a/package.json
+++ b/package.json
@@ -9,25 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^1.18.1",
-    "@react-native-community/netinfo": "^9.3.9",
+    "@aws-amplify/ui-react-native": "^1.2.24",
+    "@expo/webpack-config": "^0.12.52",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "amazon-cognito-identity-js": "^6.2.0",
-    "aws-amplify": "^5.1.3",
+    "amazon-cognito-identity-js": "^6.3.2",
+    "aws-amplify": "^5.3.7",
     "core-js": "^3.30.1",
-    "expo": "~48.0.11",
-    "expo-image-picker": "^14.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.7",
+    "expo-image-picker": "~14.3.2",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native": "0.72.3",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "expo-updates": "~0.16.4"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
